BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Publication__c.object
<CustomObject>
    <description>Published documents by Professionals</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Link to the Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Publications</relationshipLabel>
        <relationshipName>Publication</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Author_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture the author of a publication.</description>
        <label>Author</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Author_Position_BMS__c</fullName>
        <label>Author Position</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMS_Country_Code_BMS_SHARED__c</fullName>
        <description>VPRO BMS EMEA Feb-2014: created the field, used by any Region, sourced from the parent Account.</description>
        <formula>TEXT( Account__r.Account_Source_Country_BMS_CORE__c )</formula>
        <label>BMS Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_BMS__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Journal__c</fullName>
        <description>Picklist of Journals in which this publication was published</description>
        <label>Journal</label>
        <picklist>
            <picklistValues>
                <fullName>JAMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebMD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Journal_vod__c</fullName>
        <description>Text field to store the name of the journal</description>
        <label>Journal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_ID_BMS_IC__c</fullName>
        <description>Publication Identification #</description>
        <externalId>true</externalId>
        <label>PM ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Numbers_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture the pertinent page numbers for a publication.</description>
        <label>Page Numbers</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PubMed_ID_Name_vod__c</fullName>
        <description>Text field that stores the name of the PubMed id that displays in the UI</description>
        <label>PubMed ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PubMed_URL_vod__c</fullName>
        <description>Hyperlink URL for PubMed Article</description>
        <label>PubMed URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Pub_Med_URL_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture a URL link to publication.</description>
        <label>Pub Med URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Publication_Type_vod__c</fullName>
        <description>The type of Publication</description>
        <label>Publication Type</label>
        <picklist>
            <picklistValues>
                <fullName>Approval_Report_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Book_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comment_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comparative/Evaluation_Study_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General_Article_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HTA_Report_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical_Guideline_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meta-Analysis_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial_Publication_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Publication_Year_BMS__c</fullName>
        <description>Year the publication was published</description>
        <label>Publication Year</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture reference information of a publication.</description>
        <label>Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Title of the publication</description>
        <label>Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type_BMS__c</fullName>
        <label>Type</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Publication</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Publication_Year_BMS__c</columns>
        <columns>Title__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TT_PL</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Publication_Year_BMS__c</columns>
        <columns>Title__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BMS_Country_Code_BMS_SHARED__c</field>
            <operation>equals</operation>
            <value>PL</value>
        </filters>
        <label>TT PL</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PN-{00000}</displayFormat>
        <label>Publications ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Publications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>